# ai-ecosystem-workspace

./: .env.example  .gitignore  README.md  compose.yml
backend/: .gitignore  db.py  main.py  pyproject.toml  worker_settings.py
backend/core/: config.py
db/init/: 01-create-labelstudio-db.sql
diagrams/: overview.drawio
